# C_final_project

./: .gitignore  CMakeLists.txt  C_final_project.code-workspace  README.md  assembler.c  assembler.h  ast.c  ast.h  collections.c  collections.h  data structures.c  data structures.h  data_structures.c  data_structures.h  file_generator.c  file_generator.h  globals.h  machine_code.c  machine_code.h  makefile  parser.c  parser.h  pre_assembler.c  pre_assembler.h  table_generator.c  table_generator.h  test1_res  test_from_maman  test_from_maman.am  util.c  util.h  utils.c  warning_list.txt
